--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ooyala-assets",
+  "name": "ooyala-export",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Drew",
@@ -20,9 +20,7 @@
     "graphql-tools": "^2.12.0",
     "json2csv": "^3.11.5",
     "lodash": "^4.17.5",
-    "node-fetch": "^1.7.3",
-    "ooyala-api": "^0.13.2",
-    "wistia-js": "^1.0.0"
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
